2004-10-28  Vincent Noel  <vnoel@cox.net>

	* about.c (AboutShowWindow): Port to gtk_about_dialog.

	* logview.c (main): Use gtk_window_set_default_icon_name.

2004-10-27  Vincent Noel  <vnoel@cox.net>

	* zoom.c (repaint_zoom): Fixes issues brought up by multiple windows.

	* log_repaint.c: Remove the save_rows_to_expand function which is
	now useless.

	* logview.c (CloseLogMenu): Fixes issues with menu items state.

	* calendar.c: Remove unused global variables.

	* logview.c: Use the GTK_STOCK_PROPERTIES icon.

	* monitor.c: Major rewrite. Now any opened log can be monitored by
	toggling the "monitor" check menu item.

	* logview.c: Allow the opening of new windows. Remove the "Switch
	Log" option : now each window display its own log. Removed the
	"Close All Logs" option. Disabled the "Monitor" option for now
	while I figure how to implement it.
	(LoadLogMenu, FileSelectResponse): No need for MAX_NUM_LOGS
	anymore, we can open as many logs as we want.
	(FileSelectResponse): Always open a log in a new window, except if
	the window is empty or if the log is already opened in another window.

2004-10-26  Vincent Noel  <vnoel@cox.net>

	* logview.c: Major rewrite :
	 - remove most global variables
	 - the log viewer window now creates its own gtkwidget and class
	 - plenty of unused variables and functions removed
	 - extracted prototypes into header files, removed duplicate info

	* Makefile.am: remove the menus.c file which was not used anywhere.
	* logview.h: remove the AddMenu prototype.
	Remove obsolete comments and useless define.

2004-10-25  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_set_window_title): Extract the window naming
	code in its own function.

	* logview-search.c (logview_tree_model_search_iter_foreach):
	Correct display problem at startup.

	* logview.c (CreateMainWin): Use gtk_ui_manager.

	* logview-search-dialog.h: 
	* logview-search-dialog.c: 
	* logview-search.h: 
	* logview-search.c: 
	* gedit-output-window.h: 