@@ -1,5 +1,8 @@
 2004-10-28  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_help): Handle errors when displaying help,
+	display it on the right screen.
+
 	* about.c (AboutShowWindow): Port to gtk_about_dialog.
 
 	* logview.c (main): Use gtk_window_set_default_icon_name.
